D3-Networking/ex07-python-redis-services/00-namespace.yaml
# ex07 · step 1 — isolate the exercise
apiVersion: v1
kind: Namespace
metadata:
  name: d03-networking
  labels:
    purpose: d03-networking
