D3-Networking/ex07-python-redis-services/06-redis-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-client
  namespace: day02-networking
  labels:
    access: redis-unapproved
spec:
  containers:
    - name: redis-cli
      image: redis:7-alpine
      command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never
