D3-Networking/ex07-python-redis-services/02-python-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: day02-networking
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-app
          image: vishwacloudlab/pythonapp:v4-var
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: day02-networking
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - name: http
      port: 8000
      targetPort: 8000
