D3-Networking/ex07-python-redis-services/04-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-alias
  namespace: day02-networking
spec:
  type: ExternalName
  externalName: python-app.day02-networking.svc.cluster.local
