D3-Networking/ex07-python-redis-services/05-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-default-deny-ingress
  namespace: d03-networking
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-allow-python-app
  namespace: d03-networking
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: python-app
      ports:
        - protocol: TCP
          port: 6379
